# stfs

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/stfs/: block.h  const.h  crypto.h  device.h  endian_compat.h  fs.h  index.h  journal.h  raid.h  ring_buffer.h  search_engine.h  serelization.h  storage_cluster.h
src/: main.cpp
src/stfs/: block.cpp  crypto.cpp  device.cpp  fs.cpp  index.cpp  journal.cpp  raid.cpp  search_engine.cpp  storage_cluster.cpp
